@@ -11,6 +11,7 @@
 #' @param colour_by Specification of a column metadata field or a feature to colour by, see the \code{by} argument in \code{?\link{retrieveCellInfo}} for possible values. 
 #' @param shape_by Specification of a column metadata field or a feature to shape by, see the \code{by} argument in \code{?\link{retrieveCellInfo}} for possible values. 
 #' @param size_by Specification of a column metadata field or a feature to size by, see the \code{by} argument in \code{?\link{retrieveCellInfo}} for possible values. 
+#' @param order_by Specification of a column metadata field or a feature to order points by, see the \code{by} argument in \code{?\link{retrieveCellInfo}} for possible values. 
 #' @param by_exprs_values A string or integer scalar specifying which assay to obtain expression values from, 
 #' for use in point aesthetics - see \code{?\link{retrieveCellInfo}} for details.
 #' @param other_fields Additional cell-based fields to include in the data.frame, see \code{?"\link{scater-plot-args}"} for details.
@@ -53,7 +54,7 @@
 #'
 #' @export
 plotColData <- function(object, y, x = NULL, 
-    colour_by = color_by, shape_by = NULL, size_by = NULL, 
+    colour_by = color_by, shape_by = NULL, size_by = NULL, order_by = NULL,
     by_exprs_values = "logcounts", other_fields=list(),
     swap_rownames = NULL, color_by = NULL, ...)
 {
@@ -85,6 +86,7 @@ plotColData <- function(object, y, x = NULL,
     vis_out <- .incorporate_common_vis_col(df_to_plot, se = object, 
         colour_by = colour_by, shape_by = shape_by, size_by = size_by, 
         by_exprs_values = by_exprs_values, other_fields = other_fields,
+        order_by = order_by,
         swap_rownames = swap_rownames)
 
     df_to_plot <- vis_out$df
