@@ -11,6 +11,7 @@ plotColData(
   colour_by = color_by,
   shape_by = NULL,
   size_by = NULL,
+  order_by = NULL,
   by_exprs_values = "logcounts",
   other_fields = list(),
   swap_rownames = NULL,
@@ -33,6 +34,8 @@ If \code{NULL}, nothing is shown on the x-axis.}
 \item{shape_by}{Specification of a column metadata field or a feature to shape by, see the \code{by} argument in \code{?\link{retrieveCellInfo}} for possible values.}
 
 \item{size_by}{Specification of a column metadata field or a feature to size by, see the \code{by} argument in \code{?\link{retrieveCellInfo}} for possible values.}
+
+\item{order_by}{Specification of a column metadata field or a feature to order points by, see the \code{by} argument in \code{?\link{retrieveCellInfo}} for possible values.}
 
 \item{by_exprs_values}{A string or integer scalar specifying which assay to obtain expression values from, 
 for use in point aesthetics - see \code{?\link{retrieveCellInfo}} for details.}
