@@ -10,6 +10,7 @@ plotPlatePosition(
   colour_by = color_by,
   size_by = NULL,
   shape_by = NULL,
+  order_by = NULL,
   by_exprs_values = "logcounts",
   add_legend = TRUE,
   theme_size = 24,
@@ -32,6 +33,8 @@ Alternatively, a list of two factors (\code{"row"} and \code{"column"}) can be s
 \item{size_by}{Specification of a column metadata field or a feature to size by, see the \code{by} argument in \code{?\link{retrieveCellInfo}} for possible values.}
 
 \item{shape_by}{Specification of a column metadata field or a feature to shape by, see the \code{by} argument in \code{?\link{retrieveCellInfo}} for possible values.}
+
+\item{order_by}{Specification of a column metadata field or a feature to order points by, see the \code{by} argument in \code{?\link{retrieveCellInfo}} for possible values.}
 
 \item{by_exprs_values}{A string or integer scalar specifying which assay to obtain expression values from, 
 for use in point aesthetics - see the \code{exprs_values} argument in \code{?\link{retrieveCellInfo}}.}
